force-app/main/default/objects/fw1__PaymentProfile__c/fw1__PaymentProfile__c.object-meta.xml
<CustomObject>
    <label>Payment Profile</label>
    <nameField>
        <label>Payment Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>