force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Authorization_ID__c</fullName>
    <label>Authorization ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>