force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Bank_ABA_Code__c.field-meta.xml
<CustomField>
    <fullName>fw1__Bank_ABA_Code__c</fullName>
    <label>Bank ABA Code</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>