force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Card_Or_Bank_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Card_Or_Bank_ID__c</fullName>
    <label>Card Or Bank ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>