force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Credit_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Expiration_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(fw1__ExpiryYear__c)) &amp;&amp; NOT(ISBLANK(TEXT(fw1__ExpiryMonth__c))) &amp;&amp; NOT(fw1__ExpiryYear__c == &apos;Year&apos;) &amp;&amp; NOT(TEXT(fw1__ExpiryMonth__c) == &apos;Month&apos;),
DATE(
     CASE(MONTH(DATEVALUE(fw1__ExpiryYear__c + &apos;-&apos; + TEXT(fw1__ExpiryMonth__c) + &apos;-01&apos;)), 12, YEAR(DATEVALUE(fw1__ExpiryYear__c + &apos;-&apos; + TEXT(fw1__ExpiryMonth__c) + &apos;-01&apos;)) + 1, YEAR(DATEVALUE(fw1__ExpiryYear__c + &apos;-&apos; + TEXT(fw1__ExpiryMonth__c) + &apos;-01&apos;))),
     CASE(MONTH(DATEVALUE(fw1__ExpiryYear__c + &apos;-&apos; + TEXT(fw1__ExpiryMonth__c) + &apos;-01&apos;)), 12, 1, MONTH(DATEVALUE(fw1__ExpiryYear__c + &apos;-&apos; + TEXT(fw1__ExpiryMonth__c) + &apos;-01&apos;)) +1),
     1
) - 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Expiration Date</label>
    <type>Date</type>
</CustomField>