force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>fw1__CreditCardType__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>