force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Customer_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>fw1__Customer_Profile_ID__c</fullName>
    <label>Customer Profile ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>