force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>