force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__ExpiryYear__c.field-meta.xml
<CustomField>
    <fullName>fw1__ExpiryYear__c</fullName>
    <label>Expiry Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>