force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>fw1__Last_Four_Digits__c</fullName>
    <label>Last Four Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>