force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Profile_Type__c</fullName>
    <formula>IF((fw1__ExpiryYear__c &lt;&gt; null &amp;&amp; fw1__First_Name__c &lt;&gt; null &amp;&amp; fw1__Last_Name__c &lt;&gt; null), 
   &apos;Credit Card&apos;,
   IF(fw1__Name_On_Account__c &lt;&gt; null, 
      &apos;eCheck&apos;, 
      IF(fw1__Token__c &lt;&gt; null, fw1__Token_Payment_Method__c, &apos; &apos;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Type</label>
    <type>Text</type>
</CustomField>