force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__ProfileID__c.field-meta.xml
<CustomField>
    <fullName>fw1__ProfileID__c</fullName>
    <label>ProfileID</label>
    <type>AutoNumber</type>
</CustomField>