force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Requesting_Entity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Requesting_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placeholder for entity requesting bank account authorization</description>
    <inlineHelpText>Entity requesting bank account authorization</inlineHelpText>
    <label>Requesting Entity</label>
    <referenceTo>fw1__Entity__c</referenceTo>
    <relationshipLabel>Payment Profiles</relationshipLabel>
    <relationshipName>Payment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>