force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Token_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>fw1__Token_Payment_Method__c</fullName>
    <label>Token Payment Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>