force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Tokenization_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tokenization_Message__c</fullName>
    <label>Tokenization Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>