force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
                <default>true</default>
                <label>Charge</label>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>