force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__Unverified__c.field-meta.xml
<CustomField>
    <fullName>fw1__Unverified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For processors that require manual bank verification, this flag indicates whether or not the bank account is verified.</inlineHelpText>
    <label>Unverified</label>
    <type>Checkbox</type>
</CustomField>