force-app/main/default/objects/fw1__PaymentProfile__c/fields/fw1__UseAsDefault__c.field-meta.xml
<CustomField>
    <fullName>fw1__UseAsDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use as Default</label>
    <type>Checkbox</type>
</CustomField>