force-app/main/default/objects/fw1__PaymentProfile__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <columns>NAME</columns>
    <columns>fw1__Account__c</columns>
    <columns>fw1__Contact__c</columns>
    <columns>fw1__Profile_Type__c</columns>
    <columns>fw1__UseAsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>